force-app/main/default/objects/P_O_P_s__c/P_O_P_s__c.object-meta.xml
<CustomObject>
    <label>P.O.P</label>
    <nameField>
        <label>Número do P.O.P</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>P.O.P&apos;s</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>