force-app/main/default/objects/P_O_P_s__c/fields/Data_da_Atualiza_o__c.field-meta.xml
<CustomField>
    <fullName>Data_da_Atualiza_o__c</fullName>
    <description>Campo designado para a data de atualização do P.O.P.</description>
    <label>Data da Atualização</label>
    <type>Date</type>
</CustomField>