force-app/main/default/objects/P_O_P_s__c/fields/Descri_o__c.field-meta.xml
<CustomField>
    <fullName>Descri_o__c</fullName>
    <description>Campo designado para a descrição do P.O.P.</description>
    <label>Descrição</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>