force-app/main/default/objects/P_O_P_s__c/fields/N_da_Vers_o__c.field-meta.xml
<CustomField>
    <fullName>N_da_Vers_o__c</fullName>
    <description>Campo designado para a informação da versão do Procedimento Operacional Padrão.</description>
    <label>Nº da Versão</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>