force-app/main/default/objects/P_O_P_s__c/fields/Nome_do_E_A_S__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_E_A_S__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo designado para o nome do Estabelecimento Assistencial de Saúde.</description>
    <label>Nome do E.A.S</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>P.O.P&apos;s</relationshipLabel>
    <relationshipName>P_O_P_s</relationshipName>
    <type>Lookup</type>
</CustomField>