force-app/main/default/objects/P_O_P_s__c/fields/Setor_do_EAS__c.field-meta.xml
<CustomField>
    <fullName>Setor_do_EAS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo designado para o setor ao qual o P.O.P pertence.</description>
    <label>Setor do E.A.S</label>
    <referenceTo>Setor__c</referenceTo>
    <relationshipLabel>P.O.P&apos;s</relationshipLabel>
    <relationshipName>P_O_P_s</relationshipName>
    <type>Lookup</type>
</CustomField>