force-app/main/default/objects/P_O_P_s__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Assunto__c</columns>
    <columns>N_da_Vers_o__c</columns>
    <columns>Setor_do_EAS__c</columns>
    <columns>Status_de_Atualiza_o__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
    <sharedTo>
        <allPartnerUsers></allPartnerUsers>
    </sharedTo>
</ListView>